--- a/string.ipynb
+++ b/string.ipynb
@@ -122,30 +122,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "9a19feb8-86e0-40d3-a14e-88238b96643c",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'string' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[8], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m x \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m\n\u001b[1;32m----> 2\u001b[0m y \u001b[38;5;241m=\u001b[39m \u001b[43mstring\u001b[49m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(x,y)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'string' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "x = int\n",
-    "y = string\n",
-    "print(x,y)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
    "id": "026c2720-2533-4f55-9fd0-8bee3642cbf4",
    "metadata": {},
@@ -459,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "id": "3ad85a0c-45ae-4c67-9c8a-11ea174763c2",
    "metadata": {},
    "outputs": [
@@ -467,14 +443,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "my name is jaiis jai\n"
+      "mynameisjai\n"
      ]
     }
    ],
    "source": [
-    "X = \"my name\"\n",
-    "y = \"is jai\"\n",
-    "result = x+ \"\" +y\n",
+    "X = \"myname\"\n",
+    "y = \"isjai\"\n",
+    "result = X+ \"\" +y\n",
     "print(result)"
    ]
   },
@@ -499,22 +475,6 @@
     "print(string1 + string2)\n",
     "print(string1+ \" \" +string2)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a5f0d619-59ba-4242-88b0-9ce5db7f85f2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "02d64984-44cf-4b68-9128-595cdf3a62cd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -610,17 +570,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "aff11d1e-856f-47fe-b24d-a7a24d029e1f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "name1 = input(\"Enter your name1:\")\n",
-    "name2 = input(\"Enter your name2:\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 47,
    "id": "05e85d3a-c330-4097-8cb8-b7eb9402d759",
    "metadata": {},
@@ -705,6 +654,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ba53f71a",
+   "metadata": {},
+   "source": [
+    "## Formating\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "84c2842e-53c9-4ddc-a98c-bad34fa0346c",
@@ -768,26 +725,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "3f9e62a4-dbd6-452f-92b4-f89861834c6e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter your name: jai\n",
-      "Enter your age: 22\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "My name is jai. I am 22 years old\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "name = input(\"Enter your name:\")\n",
     "age = input(\"Enter your age:\")\n",
@@ -1037,9 +978,630 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0846d749",
+   "metadata": {},
+   "source": [
+    "## check if item exist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "5c6dac31",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n",
+      "['python', 3.4, False, 'programme', 'code', 'class', 4, True, 9, 'end']\n",
+      "item exist in list4\n"
+     ]
+    }
+   ],
+   "source": [
+    "list4 = list((\"python\",3.4,False,\"programme\",\"code\",\"class\", 4,True,9,\"end\"))\n",
+    "\n",
+    "print(type(list4))\n",
+    "print(list4)\n",
+    "if \"python\" in list4:\n",
+    "    print(\"item exist in list4\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "7880e1c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "item exist in list5\n"
+     ]
+    }
+   ],
+   "source": [
+    "list5 = [\"code\",\"block\",\"c\",3.4,True ]\n",
+    "if \"code\" in list5:\n",
+    "    print(\"item exist in list5\")\n",
+    "else:\n",
+    "    print(\"item not present in list\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "f17490fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "item not present in list\n"
+     ]
+    }
+   ],
+   "source": [
+    "list5 = [\"code\",\"block\",\"c\",3.4,True ]\n",
+    "if \"False\" in list5:\n",
+    "    print(\"item exist in list5\")\n",
+    "else:\n",
+    "    print(\"item not present in list\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52fc8ec2",
+   "metadata": {},
+   "source": [
+    "### change item values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "7b6d63b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['my', 'name', 'is', 'jai']\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1 = [\"my\", \"name\",\"is\",\"cricket\"]\n",
+    "list1[3] = \"jai\"\n",
+    "print(list1)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "d42c5000",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['my', 'hobby', 'is', 'playing', 'basketball']\n"
+     ]
+    }
+   ],
+   "source": [
+    "list2 = [\"my\", \"hobby\",\"is\",\"playing\",\"apple\"]\n",
+    "list2[4] = \"basketball\"\n",
+    "print(list2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "87f0aa96",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['my', 'hobby', 'basketball', 67, 'apple']\n"
+     ]
+    }
+   ],
+   "source": [
+    "list3 =  [\"my\", \"name\",\"is\",\"playing\",\"apple\"]\n",
+    "list3[1:4] = \"hobby\",\"basketball\",67\n",
+    "print(list3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "dd391bae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['my', 'name', 'is', 'jai']\n"
+     ]
+    }
+   ],
+   "source": [
+    "list4 = [\"my\",\"name\",\"is\",\"kook\"]\n",
+    "list4[-1] = \"jai\"\n",
+    "print(list4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39c2b451",
+   "metadata": {},
+   "source": [
+    "### insert item at a particular place"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "887e04d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['python', 'class', 'code', 'c', 6, 3.4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1 = [\"python\",\"code\",\"c\", 6,3.4]\n",
+    "result = list1.insert(1,\"class\")\n",
+    "print(list1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "6d774f7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['python', 'code', 'c', 6, 3.4, 'mango']\n"
+     ]
+    }
+   ],
+   "source": [
+    "list2 = [\"python\",\"code\",\"c\", 6,3.4]\n",
+    "result = list2.append(\"mango\")\n",
+    "print(list2)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a237d4b7",
+   "metadata": {},
+   "source": [
+    "## extend\n",
+    "#### extend items from one listt to another list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "f5e00e06",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['my', 'name', 'is', 'jai', 'my', 'hobby', 'is', 'playing', 'cricket']\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1 = [\"my\",\"name\",\"is\",\"jai\"]\n",
+    "list2 = [\"my\", \"hobby\", \"is\" ,\"playing\",\"cricket\"]\n",
+    "list1.extend(list2)\n",
+    "print(list1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "034d2fd2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['my', 'name', 'is', 'jai']\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1 = [\"my\",\"name\",\"is\",\"jai\",\"class\"]\n",
+    "list1.remove(\"class\")\n",
+    "print(list1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "69013916",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['my', 'name', 'is', 'jai']\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1 = [\"my\",\"name\",\"is\",\"jai\",\"class\"]\n",
+    "list1.pop()                                  #removing last element\n",
+    "print(list1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "7e8c6f85",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['name', 'is', 'jai', 'class']\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1 = [\"my\",\"name\",\"is\",\"jai\",\"class\"]\n",
+    "list1.pop(0)                                  #remove indexed number\n",
+    "print(list1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "5604b1c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list2 = [\"python\",\"code\",3]\n",
+    "list2.clear()\n",
+    "print(list2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a875de0b",
+   "metadata": {},
+   "source": [
+    "## Sorting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "f8a23193",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 'cat', 'deer', 'monkey']\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1 = [\"apple\",\"cat\",\"monkey\",\"deer\"]\n",
+    "list1.sort()                             #alphabetically\n",
+    "print(list1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "b437df02",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 4, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list2 = [2,4,8,4,9,]\n",
+    "list2.sort()                             \n",
+    "print(list2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "750f6ef0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['monkey', 'deer', 'cat', 'apple']\n"
+     ]
+    }
+   ],
+   "source": [
+    "list3 = [\"apple\",\"cat\",\"monkey\",\"deer\"]\n",
+    "list3.sort(reverse = True)                      #descending order       \n",
+    "print(list3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "24e40bf5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9, 8, 4, 4, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list4 = [2,4,8,4,9,]\n",
+    "list4.sort(reverse = True)                             \n",
+    "print(list4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "cda4a2d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Monkey', 'apple', 'cat', 'deer']\n"
+     ]
+    }
+   ],
+   "source": [
+    "list5 = [\"apple\",\"cat\",\"Monkey\",\"deer\"]\n",
+    "list5.sort()                      #takes capital word first    \n",
+    "print(list5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "8d7fca42",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 'cat', 'deer', 'Monkey']\n"
+     ]
+    }
+   ],
+   "source": [
+    "list5 = [\"apple\",\"cat\",\"Monkey\",\"deer\"]\n",
+    "list5.sort(key = str.lower)                        \n",
+    "print(list5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a6f9b42",
+   "metadata": {},
+   "source": [
+    "## reverse order"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "e8947faf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['cat', 'python', 'class']\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1 = [\"cat\",\"python\",\"class\"]\n",
+    "list1.reverse\n",
+    "print(list1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c763ed65",
+   "metadata": {},
+   "source": [
+    "### duplicate list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "5c7a1b02",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['class', 'python']\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1 = [\"class\", \"python\"]\n",
+    "list2 = [\"code\",\"c\",\"programme\"]\n",
+    "list2 = list1\n",
+    "print(list2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "787457b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['class', 'python']\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1 = [\"class\", \"python\"]\n",
+    "list2 = [\"code\",\"c\",\"programme\"]\n",
+    "list2 = list1.copy()\n",
+    "print(list2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf2cd2e5",
+   "metadata": {},
+   "source": [
+    "## join two list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "d54ebdb7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'b', 1, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1 =['a','b']\n",
+    "list2 = [1,2,3,4]\n",
+    "list3 = list1 + list2\n",
+    "print(list3)         "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "493e841c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'b', 1]\n",
+      "['a', 'b', 1, 2]\n",
+      "['a', 'b', 1, 2, 3]\n",
+      "['a', 'b', 1, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1 =['a','b']\n",
+    "list2 = [1,2,3,4]\n",
+    "for x in list2:\n",
+    "    list1.append(x)\n",
+    "    print(list1)\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1f20fa9",
+   "metadata": {},
+   "source": [
+    "## count method\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2b516b7",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "b89d0623",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['python', 'class', 'code', 'code', 'c']\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1 =[\"python\",\"class\",\"code\",\"code\",\"c\"]\n",
+    "list1.count(\" \")\n",
+    "print(list1)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac44faa9-a23f-40a5-bb27-2423bfecaf7a",
+   "id": "9c82113d",
    "metadata": {},
    "outputs": [],
    "source": []
