--- a/Tuple.ipynb
+++ b/Tuple.ipynb
@@ -251,6 +251,154 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('python', 'code', 'class', 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = ((\"python\",\"code\",\"cake\",2))\n",
+    "y = list(x)\n",
+    "y[2] = \"class\"\n",
+    "x = tuple(y)\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('my', 'name', 'is', 'jai')\n"
+     ]
+    }
+   ],
+   "source": [
+    "j = ((\"my\",\"name\",\"is\",\"kook\"))\n",
+    "k = list(j)\n",
+    "k[3] = \"jai\"\n",
+    "j = tuple(k)\n",
+    "print(j)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('my', 'name', 'is', 'jai')\n"
+     ]
+    }
+   ],
+   "source": [
+    "x1 = (\"my\",\"name\",\"is\")\n",
+    "y1 = list(x1)\n",
+    "y1.append(\"jai\")\n",
+    "x1 = tuple(y1)\n",
+    "print(x1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('my', 'hobby', 'is', 'dancing')\n"
+     ]
+    }
+   ],
+   "source": [
+    "x2 = (\"my\",\"hobby\",\"is\")\n",
+    "y2 = list(x2)\n",
+    "y2.append(\"dancing\")\n",
+    "x2 = tuple(y2)\n",
+    "print(x2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### concatenate tuples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('python', 'class', 'code', 2, 5, 'programme')\n"
+     ]
+    }
+   ],
+   "source": [
+    "tuple1 = (\"python\",\"class\",\"code\",2,5)\n",
+    "tuple2 = (\"programme\",)\n",
+    "tuple1 += tuple2\n",
+    "print(tuple1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tuple Unpacking"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apple\n",
+      "banana\n",
+      "papaya\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits = (\"apple\",\"banana\",\"papaya\")\n",
+    "x,y,z = fruits\n",
+    "print(x)\n",
+    "print(y)\n",
+    "print(z)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
