--- a/set.ipynb
+++ b/set.ipynb
@@ -293,7 +293,67 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Join set"
+    "#### Join sets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'class', 'apple', 'banana', 'code', 'python'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "set3 = {\"python\",\"code\",\"class\"}\n",
+    "set4 = {\"apple\",\"banana\"} \n",
+    "result = set3.union(set4)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'book', 'python'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "set5 = {\"python\",\"code\",\"class\",\"book\"}\n",
+    "set6 = {\"python\",\"van\",\"book\"}\n",
+    "result = set5.intersection(set6)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'class', 'code'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "set5 = {\"python\",\"code\",\"class\",\"book\"}\n",
+    "set6 = {\"python\",\"van\",\"book\"}\n",
+    "result = set5.difference(set6)\n",
+    "print(result)"
    ]
   },
   {
