--- a/set.ipynb
+++ b/set.ipynb
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
    ],
    "source": [
     "set1 = {\"python\",\"code\",\"class\"}\n",
-    "set1.pop()\n",
+    "set1.pop()                       #remove any element\n",
     "print(set1)"
    ]
   },
