--- a/list.ipynb
+++ b/list.ipynb
@@ -211,6 +211,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['AI', 6, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "List9 =[\"Data\",\"Science\",\"AI\",6,8,\"Hello\"]\n",
+    "print(List9[2:5])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [
