--- a/If, else.ipynb
+++ b/If, else.ipynb
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -273,15 +273,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (737712639.py, line 6)",
+     "evalue": "invalid syntax (2802405223.py, line 8)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[32], line 6\u001b[1;36m\u001b[0m\n\u001b[1;33m    elif x=y=z=90:\u001b[0m\n\u001b[1;37m          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;36m  Cell \u001b[1;32mIn[34], line 8\u001b[1;36m\u001b[0m\n\u001b[1;33m    elif x=y=z<90:\u001b[0m\n\u001b[1;37m          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -291,7 +291,7 @@
     "z = int(input(\"enter number:\"))\n",
     "if z+y+z!=180:\n",
     "    print(\"triangle is not valid\")\n",
-    "elif x=y=z=90:\n",
+    "elif x>y>z==90:\n",
     "    print(\"right angle triangle\")\n",
     "elif x=y=z<90:\n",
     "    print(\"acute triangle\")\n",
