--- a/practice questions_2.ipynb
+++ b/practice questions_2.ipynb
@@ -224,7 +224,7 @@
     "    print(\"triangle is not valid\")\n",
     "elif x>y>z==90:\n",
     "    print(\"right angle triangle\")\n",
-    "elif x<y<z==90:\n",
+    "          elif x<y<z==90:\n",
     "    print(\"acute triangle\")\n",
     "else:\n",
     "    print(\"equilateral triangle\")\n",
@@ -569,11 +569,196 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## day 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20 + 4 = 24\n"
+     ]
+    }
+   ],
+   "source": [
+    "#1. Create a simple calculator program that performs addition, subtraction, multiplication, or division based on user input.\n",
+    "select = int(input(\"Select operations form 1, 2, 3, 4 :\"))\n",
+    "\n",
+    "x = int(input(\"Enter first number: \"))\n",
+    "y = int(input(\"Enter second number: \"))\n",
+    "\n",
+    "if select == 1:\n",
+    "\tprint(x, \"+\", y, \"=\",x+y)\n",
+    "\t\t\t\t\t\n",
+    "\t\n",
+    "elif select == 2:\n",
+    "\tprint(x, \"-\", y, \"=\", x-y)\n",
+    "\n",
+    "elif select == 3:\n",
+    "\tprint(x, \"*\", y, \"=\", x*y)\n",
+    "\t\t\t\t\t\n",
+    "\n",
+    "elif select == 4:\n",
+    "\tprint(x, \"/\", y, \"=\", x%y)\n",
+    "\t\t\t\t\t\n",
+    "else:\n",
+    "\tprint(\"Invalid input\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "govind\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#tring Length Checker:\n",
+    "    #Implement a program that takes a string as input and prints its length.\n",
+    "\n",
+    "a = str(input(\"enter string:\"))\n",
+    "\n",
+    "print(a)\n",
+    "len(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'sorted_dict' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[13], line 10\u001b[0m\n\u001b[0;32m      6\u001b[0m myKeys \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(myDict\u001b[38;5;241m.\u001b[39mkeys())\n\u001b[0;32m      7\u001b[0m myKeys\u001b[38;5;241m.\u001b[39msort()\n\u001b[1;32m---> 10\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43msorted_dict\u001b[49m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'sorted_dict' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "#Write a Python program to sort Python Dictionaries by Key or Value?\n",
+    "\n",
+    "myDict = {'jai': 10, 'krishan': 9,\n",
+    "\t\t'ajay': 15, 'yash': 2, 'suraj': 32}\n",
+    "\n",
+    "myKeys = list(myDict.keys())\n",
+    "myKeys.sort()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'g', 't', 'h', 'n', 's', 'r', 'o', 'l', ' ', 'e', 'w', 'i'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#64.\tWrite a Python to find all duplicate characters in string?\n",
+    "\n",
+    "string1 = \"hello world this is string one\"\n",
+    "string2 = \"hello this is string two\"\n",
+    "\n",
+    "string1 = set(string1)\n",
+    "string2 = set(string2)\n",
+    "\n",
+    "result = string1.intersection(string2)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "not a special character\n"
+     ]
+    }
+   ],
+   "source": [
+    "#65.\tWrite a Python Program to check if a string contains any special character?\n",
+    "\n",
+    "string1 = input(\"enter special character:\")\n",
+    "if string1=='!,@,#,$,%,^,&,*,()':\n",
+    "    print(\"special character\")\n",
+    "else:\n",
+    "    print(\"not a special character\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
   }
  ],
  "metadata": {
