--- a/loop.ipynb
+++ b/loop.ipynb
@@ -555,6 +555,451 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "504\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [2,3,6,9,8,24,67,42,10,76,25,66,89,90,12,14,18,26,4,8,21,98,49,13]\n",
+    "temp = 0\n",
+    "for i in x:\n",
+    "    if i %2==0:\n",
+    "        temp += i\n",
+    "    else:\n",
+    "        # print(\"odd number\")\n",
+    "        pass\n",
+    "print(temp)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = 2\n",
+    "if a == 2 :\n",
+    "    pass\n",
+    "else:\n",
+    "    print('hii')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4  * 1  = 4\n",
+      "4  * 2  = 8\n",
+      "4  * 3  = 12\n",
+      "4  * 4  = 16\n",
+      "4  * 5  = 20\n",
+      "4  * 6  = 24\n",
+      "4  * 7  = 28\n",
+      "4  * 8  = 32\n",
+      "4  * 9  = 36\n",
+      "4  * 10  = 40\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = int(input(\"enter number\"))\n",
+    "for i in range(1,11):            \n",
+    "   print(f\"{y}  * {i}  = {y*i }\"  )\n",
+    "\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num = 1\n",
+    "while num %2 !=0: \n",
+    "   print(f\"{y}  * {i}  = {y*i }\" )\n",
+    "   i +=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "company  upflairs jaipur\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = \"upflairs\"\n",
+    "b = 'jaipur'\n",
+    "# print('hello world')\n",
+    "# print(a)\n",
+    "\n",
+    "# print(a,b)\n",
+    "print(\"company \",   a,b)\n",
+    "# print(f\"company {a} {b}\")\n",
+    "\n",
+    "# print(2/2)\n",
+    "\n",
+    "\n",
+    "# city = \"jaipur\"\n",
+    "# strr  = f\"upflairs pvt ltd jaipur {city} \"\n",
+    "# strr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# min()\n",
+    "# max()\n",
+    "# sort()\n",
+    "# types of function \n",
+    "\n",
+    "1. built in function  --> min ,  max, sum , print\n",
+    "2. user defined function "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "good morning\n",
+      "Hello welcome to you \n"
+     ]
+    }
+   ],
+   "source": [
+    "# defining function \n",
+    "def hello():\n",
+    "    #block of code \n",
+    "    print(\"good morning\")\n",
+    "    print('Hello welcome to you ')\n",
+    "\n",
+    "\n",
+    " \n",
+    "hello()   # calling \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def add():\n",
+    "\n",
+    "    print('hello')\n",
+    "    return 5 + 10\n",
+    "    print('hello ')\n",
+    "\n",
+    "\n",
+    "result = add()\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "# without parameter\n",
+    "def add():\n",
+    "    num1 = 10\n",
+    "    num2 = 20\n",
+    "    result = num1 + num2\n",
+    "    return result\n",
+    "\n",
+    "output = add()\n",
+    "print(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "# with parameters\n",
+    "\n",
+    "def add(num1 ,num2 ):\n",
+    "\n",
+    "    result = num1 + num2\n",
+    "    return result\n",
+    "\n",
+    "\n",
+    "nu1 = 10\n",
+    "nu2 = 20\n",
+    "output = add( 10,20)\n",
+    "print(output)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "82"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "add(80,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def apna_min(lst):\n",
+    "    #block of code \n",
+    "    minimum = x[0] \n",
+    "    for  i in lst:\n",
+    "        if minimum > i:\n",
+    "            minimum = i\n",
+    "\n",
+    "    return minimum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = [10,76,25,66,89,90,12,14,18,26,4,8,21,9]\n",
+    "apna_min(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = [10,76,25,66,89,90,12,14,18,26,4,8,21,98,49,1,3]\n",
+    "\n",
+    "temp = x[0]    10   , 4  , 1\n",
+    "\n",
+    "for  i in x:\n",
+    "    if temp > i:\n",
+    "        temp = i\n",
+    "temp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "98"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "76"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst = [20,56,34,76,34,54,23,43,53,65]\n",
+    "max(lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## sort()  --> ascending\n",
+    "#                descending order\n",
+    "\n",
+    "\n",
+    "#table --> generate_table(num)\n",
+    "\n",
+    "#square find function square(LST)  return square of all element\n",
+    "#average find function average(lst)  return average of all elements from given list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#square find function square(LST)  return square of all element\n",
+    "\n",
+    "def square_element(input_list):\n",
+    "    return[x**2 for x in input_list]\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "squared_list: [64, 81, 36, 4, 3025]\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = [8,9,6,2,55]\n",
+    "square_list = square_element(numbers) \n",
+    "print(\"squared_list:\" , square_list )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def avg_fun(input_lst):\n",
+    "    return sum(input_lst)/len(input_lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "avg_lst: 6.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "z = [2,4,6,8,10]\n",
+    "avg_lst = avg_fun(z)\n",
+    "print(\"avg_lst:\" , avg_lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
