--- a/loop.ipynb
+++ b/loop.ipynb
@@ -1567,6 +1567,222 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def func1(list):\n",
+    "    temp = 0\n",
+    "    for i in list:\n",
+    "         if i%2==0:\n",
+    "              temp+=i\n",
+    "          \n",
+    "    return   temp \n",
+    "         \n",
+    "         "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list = [2,3,4,5,6]\n",
+    "func1(list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def func2(list):\n",
+    "    temp1 = 0\n",
+    "    for i in list:\n",
+    "        if i%2!=0:\n",
+    "            temp1+=i\n",
+    "\n",
+    "    return temp1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list1 = [3,6,5,7,1]\n",
+    "func2(list1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def func3(list):\n",
+    "    temp2 = 0\n",
+    "    for i in list:\n",
+    "        if i%2==0:\n",
+    "            temp2 = i**2 + temp2\n",
+    "    return temp2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "36"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list1 = [3,6,5,7,1]\n",
+    "func3(list1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def func4(list,target):\n",
+    "    \n",
+    "    for position, i in enumerate(list):\n",
+    "        if i==target:\n",
+    "            print(\"your target\",target,\"is present at this position\",position)\n",
+    "        else:\n",
+    "            print(\"target is not present\")\n",
+    "    return         \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "target is not present\n",
+      "your target 6 is present at this position 1\n",
+      "target is not present\n",
+      "target is not present\n",
+      "target is not present\n",
+      "your target 6 is present at this position 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1 = [3,6,5,7,1,6]\n",
+    "func4(list1,6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['fail', 'pass', 'pass', 'pass', 'fail', 'pass']"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list = [22,34,56,78,20,45]\n",
+    "\n",
+    "list1 = [\"pass\" if item>=34 else \"fail\" for item in list]\n",
+    "list1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
