--- a/set.ipynb
+++ b/set.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,7 @@
      "output_type": "stream",
      "text": [
       "<class 'set'>\n",
-      "{'class', 'code', 'python'}\n"
+      "{'python', 'code', 'class'}\n"
      ]
     }
    ],
