--- a/python/practice questions_2.ipynb
+++ b/python/practice questions_2.ipynb
@@ -51,15 +51,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#3 Determine if a year is a leap year or not.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
@@ -177,6 +168,31 @@
     "    print(\"take an umbrella\")\n",
     "else:\n",
     "    print(\"enjoy the weather\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world\n"
+     ]
+    }
+   ],
+   "source": [
+    "def hell():\n",
+    "    print('hello world')\n",
+    "\n",
+    "input('enter any char :')\n",
+    "\n",
+    "hell()\n",
+    "#threading & multithreading\n",
+    "# iterator, generator , decorator \n",
+    "# logging"
    ]
   },
   {
