--- a/python_module/pandas_file.ipynb
+++ b/python_module/pandas_file.ipynb
@@ -18001,6 +18001,384 @@
    "source": [
     "df['ram_gb'].map(lambda x:x.split(' ')[0])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Jai\\AppData\\Local\\Temp\\ipykernel_8052\\4000385519.py:1: DtypeWarning: Columns (3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(\"https://raw.githubusercontent.com/Ranjit-Singh-786/Book-Recommedation_Project/master/Data/Books/Books.csv\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"https://raw.githubusercontent.com/Ranjit-Singh-786/Book-Recommedation_Project/master/Data/Books/Books.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('book_data.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ISBN</th>\n",
+       "      <th>Book-Title</th>\n",
+       "      <th>Book-Author</th>\n",
+       "      <th>Year-Of-Publication</th>\n",
+       "      <th>Publisher</th>\n",
+       "      <th>Image-URL-S</th>\n",
+       "      <th>Image-URL-M</th>\n",
+       "      <th>Image-URL-L</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0195153448</td>\n",
+       "      <td>Classical Mythology</td>\n",
+       "      <td>Mark P. O. Morford</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>Oxford University Press</td>\n",
+       "      <td>http://images.amazon.com/images/P/0195153448.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/0195153448.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/0195153448.0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0002005018</td>\n",
+       "      <td>Clara Callan</td>\n",
+       "      <td>Richard Bruce Wright</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>HarperFlamingo Canada</td>\n",
+       "      <td>http://images.amazon.com/images/P/0002005018.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/0002005018.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/0002005018.0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0060973129</td>\n",
+       "      <td>Decision in Normandy</td>\n",
+       "      <td>Carlo D'Este</td>\n",
+       "      <td>1991</td>\n",
+       "      <td>HarperPerennial</td>\n",
+       "      <td>http://images.amazon.com/images/P/0060973129.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/0060973129.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/0060973129.0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0374157065</td>\n",
+       "      <td>Flu: The Story of the Great Influenza Pandemic...</td>\n",
+       "      <td>Gina Bari Kolata</td>\n",
+       "      <td>1999</td>\n",
+       "      <td>Farrar Straus Giroux</td>\n",
+       "      <td>http://images.amazon.com/images/P/0374157065.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/0374157065.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/0374157065.0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0393045218</td>\n",
+       "      <td>The Mummies of Urumchi</td>\n",
+       "      <td>E. J. W. Barber</td>\n",
+       "      <td>1999</td>\n",
+       "      <td>W. W. Norton &amp;amp; Company</td>\n",
+       "      <td>http://images.amazon.com/images/P/0393045218.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/0393045218.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/0393045218.0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>271355</th>\n",
+       "      <td>0440400988</td>\n",
+       "      <td>There's a Bat in Bunk Five</td>\n",
+       "      <td>Paula Danziger</td>\n",
+       "      <td>1988</td>\n",
+       "      <td>Random House Childrens Pub (Mm)</td>\n",
+       "      <td>http://images.amazon.com/images/P/0440400988.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/0440400988.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/0440400988.0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>271356</th>\n",
+       "      <td>0525447644</td>\n",
+       "      <td>From One to One Hundred</td>\n",
+       "      <td>Teri Sloat</td>\n",
+       "      <td>1991</td>\n",
+       "      <td>Dutton Books</td>\n",
+       "      <td>http://images.amazon.com/images/P/0525447644.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/0525447644.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/0525447644.0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>271357</th>\n",
+       "      <td>006008667X</td>\n",
+       "      <td>Lily Dale : The True Story of the Town that Ta...</td>\n",
+       "      <td>Christine Wicker</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>HarperSanFrancisco</td>\n",
+       "      <td>http://images.amazon.com/images/P/006008667X.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/006008667X.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/006008667X.0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>271358</th>\n",
+       "      <td>0192126040</td>\n",
+       "      <td>Republic (World's Classics)</td>\n",
+       "      <td>Plato</td>\n",
+       "      <td>1996</td>\n",
+       "      <td>Oxford University Press</td>\n",
+       "      <td>http://images.amazon.com/images/P/0192126040.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/0192126040.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/0192126040.0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>271359</th>\n",
+       "      <td>0767409752</td>\n",
+       "      <td>A Guided Tour of Rene Descartes' Meditations o...</td>\n",
+       "      <td>Christopher  Biffle</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>McGraw-Hill Humanities/Social Sciences/Languages</td>\n",
+       "      <td>http://images.amazon.com/images/P/0767409752.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/0767409752.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/0767409752.0...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>271360 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              ISBN                                         Book-Title  \\\n",
+       "0       0195153448                                Classical Mythology   \n",
+       "1       0002005018                                       Clara Callan   \n",
+       "2       0060973129                               Decision in Normandy   \n",
+       "3       0374157065  Flu: The Story of the Great Influenza Pandemic...   \n",
+       "4       0393045218                             The Mummies of Urumchi   \n",
+       "...            ...                                                ...   \n",
+       "271355  0440400988                         There's a Bat in Bunk Five   \n",
+       "271356  0525447644                            From One to One Hundred   \n",
+       "271357  006008667X  Lily Dale : The True Story of the Town that Ta...   \n",
+       "271358  0192126040                        Republic (World's Classics)   \n",
+       "271359  0767409752  A Guided Tour of Rene Descartes' Meditations o...   \n",
+       "\n",
+       "                 Book-Author Year-Of-Publication  \\\n",
+       "0         Mark P. O. Morford                2002   \n",
+       "1       Richard Bruce Wright                2001   \n",
+       "2               Carlo D'Este                1991   \n",
+       "3           Gina Bari Kolata                1999   \n",
+       "4            E. J. W. Barber                1999   \n",
+       "...                      ...                 ...   \n",
+       "271355        Paula Danziger                1988   \n",
+       "271356            Teri Sloat                1991   \n",
+       "271357      Christine Wicker                2004   \n",
+       "271358                 Plato                1996   \n",
+       "271359   Christopher  Biffle                2000   \n",
+       "\n",
+       "                                               Publisher  \\\n",
+       "0                                Oxford University Press   \n",
+       "1                                  HarperFlamingo Canada   \n",
+       "2                                        HarperPerennial   \n",
+       "3                                   Farrar Straus Giroux   \n",
+       "4                             W. W. Norton &amp; Company   \n",
+       "...                                                  ...   \n",
+       "271355                   Random House Childrens Pub (Mm)   \n",
+       "271356                                      Dutton Books   \n",
+       "271357                                HarperSanFrancisco   \n",
+       "271358                           Oxford University Press   \n",
+       "271359  McGraw-Hill Humanities/Social Sciences/Languages   \n",
+       "\n",
+       "                                              Image-URL-S  \\\n",
+       "0       http://images.amazon.com/images/P/0195153448.0...   \n",
+       "1       http://images.amazon.com/images/P/0002005018.0...   \n",
+       "2       http://images.amazon.com/images/P/0060973129.0...   \n",
+       "3       http://images.amazon.com/images/P/0374157065.0...   \n",
+       "4       http://images.amazon.com/images/P/0393045218.0...   \n",
+       "...                                                   ...   \n",
+       "271355  http://images.amazon.com/images/P/0440400988.0...   \n",
+       "271356  http://images.amazon.com/images/P/0525447644.0...   \n",
+       "271357  http://images.amazon.com/images/P/006008667X.0...   \n",
+       "271358  http://images.amazon.com/images/P/0192126040.0...   \n",
+       "271359  http://images.amazon.com/images/P/0767409752.0...   \n",
+       "\n",
+       "                                              Image-URL-M  \\\n",
+       "0       http://images.amazon.com/images/P/0195153448.0...   \n",
+       "1       http://images.amazon.com/images/P/0002005018.0...   \n",
+       "2       http://images.amazon.com/images/P/0060973129.0...   \n",
+       "3       http://images.amazon.com/images/P/0374157065.0...   \n",
+       "4       http://images.amazon.com/images/P/0393045218.0...   \n",
+       "...                                                   ...   \n",
+       "271355  http://images.amazon.com/images/P/0440400988.0...   \n",
+       "271356  http://images.amazon.com/images/P/0525447644.0...   \n",
+       "271357  http://images.amazon.com/images/P/006008667X.0...   \n",
+       "271358  http://images.amazon.com/images/P/0192126040.0...   \n",
+       "271359  http://images.amazon.com/images/P/0767409752.0...   \n",
+       "\n",
+       "                                              Image-URL-L  \n",
+       "0       http://images.amazon.com/images/P/0195153448.0...  \n",
+       "1       http://images.amazon.com/images/P/0002005018.0...  \n",
+       "2       http://images.amazon.com/images/P/0060973129.0...  \n",
+       "3       http://images.amazon.com/images/P/0374157065.0...  \n",
+       "4       http://images.amazon.com/images/P/0393045218.0...  \n",
+       "...                                                   ...  \n",
+       "271355  http://images.amazon.com/images/P/0440400988.0...  \n",
+       "271356  http://images.amazon.com/images/P/0525447644.0...  \n",
+       "271357  http://images.amazon.com/images/P/006008667X.0...  \n",
+       "271358  http://images.amazon.com/images/P/0192126040.0...  \n",
+       "271359  http://images.amazon.com/images/P/0767409752.0...  \n",
+       "\n",
+       "[271360 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6     http://images.amazon.com/images/P/0425176428.0...\n",
+       "7     http://images.amazon.com/images/P/0671870432.0...\n",
+       "8     http://images.amazon.com/images/P/0679425608.0...\n",
+       "9     http://images.amazon.com/images/P/074322678X.0...\n",
+       "10    http://images.amazon.com/images/P/0771074670.0...\n",
+       "11    http://images.amazon.com/images/P/080652121X.0...\n",
+       "12    http://images.amazon.com/images/P/0887841740.0...\n",
+       "13    http://images.amazon.com/images/P/1552041778.0...\n",
+       "14    http://images.amazon.com/images/P/1558746218.0...\n",
+       "15    http://images.amazon.com/images/P/1567407781.0...\n",
+       "16    http://images.amazon.com/images/P/1575663937.0...\n",
+       "17    http://images.amazon.com/images/P/1881320189.0...\n",
+       "18    http://images.amazon.com/images/P/0440234743.0...\n",
+       "19    http://images.amazon.com/images/P/0452264464.0...\n",
+       "Name: Image-URL-L, dtype: object"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Image-URL-L'][6:20]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(271360, 8)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# top 50 images download "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'http://images.amazon.com/images/P/0374157065.01.LZZZZZZZ.jpg'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Image-URL-L'][3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
